converted images to mpl charts

--- a/notebooks/log_reg.ipynb
+++ b/notebooks/log_reg.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -251,21 +251,11 @@
     }
    ],
    "source": [
-    "# initialise log regression\n",
-    "logreg = LogisticRegression(max_iter=400)\n",
-    "\n",
-    "# fit model with daata\n",
-    "logreg.fit(X_train_smote,y_train_smote);\n",
+    "# initialise log regression and fit \n",
+    "logreg = LogisticRegression(max_iter=400).fit(X_train_smote,y_train_smote);\n",
     "\n",
     "y_pred = logreg.predict(X_test);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -491,488 +481,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gender</th>\n",
-       "      <th>SeniorCitizen</th>\n",
-       "      <th>Partner</th>\n",
-       "      <th>Dependents</th>\n",
-       "      <th>tenure</th>\n",
-       "      <th>PhoneService</th>\n",
-       "      <th>MultipleLines</th>\n",
-       "      <th>InternetService</th>\n",
-       "      <th>OnlineSecurity</th>\n",
-       "      <th>OnlineBackup</th>\n",
-       "      <th>DeviceProtection</th>\n",
-       "      <th>TechSupport</th>\n",
-       "      <th>StreamingTV</th>\n",
-       "      <th>StreamingMovies</th>\n",
-       "      <th>Contract</th>\n",
-       "      <th>PaperlessBilling</th>\n",
-       "      <th>PaymentMethod</th>\n",
-       "      <th>MonthlyCharges</th>\n",
-       "      <th>TotalCharges</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>1</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No phone service</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Month-to-month</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Electronic check</td>\n",
-       "      <td>29.85</td>\n",
-       "      <td>29.85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>34</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>One year</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Mailed check</td>\n",
-       "      <td>56.95</td>\n",
-       "      <td>1889.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Month-to-month</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Mailed check</td>\n",
-       "      <td>53.85</td>\n",
-       "      <td>108.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>45</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No phone service</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>One year</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Bank transfer (automatic)</td>\n",
-       "      <td>42.30</td>\n",
-       "      <td>1840.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Fiber optic</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Month-to-month</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Electronic check</td>\n",
-       "      <td>70.70</td>\n",
-       "      <td>151.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7038</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>One year</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Mailed check</td>\n",
-       "      <td>84.80</td>\n",
-       "      <td>1990.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7039</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>72</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Fiber optic</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>One year</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Credit card (automatic)</td>\n",
-       "      <td>103.20</td>\n",
-       "      <td>7362.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7040</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>11</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No phone service</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Month-to-month</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Electronic check</td>\n",
-       "      <td>29.60</td>\n",
-       "      <td>346.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7041</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Fiber optic</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Month-to-month</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Mailed check</td>\n",
-       "      <td>74.40</td>\n",
-       "      <td>306.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7042</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>66</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Fiber optic</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Two year</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Bank transfer (automatic)</td>\n",
-       "      <td>105.65</td>\n",
-       "      <td>6844.50</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7032 rows × 19 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      gender  SeniorCitizen Partner Dependents  tenure PhoneService  \\\n",
-       "0     Female              0     Yes         No       1           No   \n",
-       "1       Male              0      No         No      34          Yes   \n",
-       "2       Male              0      No         No       2          Yes   \n",
-       "3       Male              0      No         No      45           No   \n",
-       "4     Female              0      No         No       2          Yes   \n",
-       "...      ...            ...     ...        ...     ...          ...   \n",
-       "7038    Male              0     Yes        Yes      24          Yes   \n",
-       "7039  Female              0     Yes        Yes      72          Yes   \n",
-       "7040  Female              0     Yes        Yes      11           No   \n",
-       "7041    Male              1     Yes         No       4          Yes   \n",
-       "7042    Male              0      No         No      66          Yes   \n",
-       "\n",
-       "         MultipleLines InternetService OnlineSecurity OnlineBackup  \\\n",
-       "0     No phone service             DSL             No          Yes   \n",
-       "1                   No             DSL            Yes           No   \n",
-       "2                   No             DSL            Yes          Yes   \n",
-       "3     No phone service             DSL            Yes           No   \n",
-       "4                   No     Fiber optic             No           No   \n",
-       "...                ...             ...            ...          ...   \n",
-       "7038               Yes             DSL            Yes           No   \n",
-       "7039               Yes     Fiber optic             No          Yes   \n",
-       "7040  No phone service             DSL            Yes           No   \n",
-       "7041               Yes     Fiber optic             No           No   \n",
-       "7042                No     Fiber optic            Yes           No   \n",
-       "\n",
-       "     DeviceProtection TechSupport StreamingTV StreamingMovies        Contract  \\\n",
-       "0                  No          No          No              No  Month-to-month   \n",
-       "1                 Yes          No          No              No        One year   \n",
-       "2                  No          No          No              No  Month-to-month   \n",
-       "3                 Yes         Yes          No              No        One year   \n",
-       "4                  No          No          No              No  Month-to-month   \n",
-       "...               ...         ...         ...             ...             ...   \n",
-       "7038              Yes         Yes         Yes             Yes        One year   \n",
-       "7039              Yes          No         Yes             Yes        One year   \n",
-       "7040               No          No          No              No  Month-to-month   \n",
-       "7041               No          No          No              No  Month-to-month   \n",
-       "7042              Yes         Yes         Yes             Yes        Two year   \n",
-       "\n",
-       "     PaperlessBilling              PaymentMethod  MonthlyCharges  TotalCharges  \n",
-       "0                 Yes           Electronic check           29.85         29.85  \n",
-       "1                  No               Mailed check           56.95       1889.50  \n",
-       "2                 Yes               Mailed check           53.85        108.15  \n",
-       "3                  No  Bank transfer (automatic)           42.30       1840.75  \n",
-       "4                 Yes           Electronic check           70.70        151.65  \n",
-       "...               ...                        ...             ...           ...  \n",
-       "7038              Yes               Mailed check           84.80       1990.50  \n",
-       "7039              Yes    Credit card (automatic)          103.20       7362.90  \n",
-       "7040              Yes           Electronic check           29.60        346.45  \n",
-       "7041              Yes               Mailed check           74.40        306.60  \n",
-       "7042              Yes  Bank transfer (automatic)          105.65       6844.50  \n",
-       "\n",
-       "[7032 rows x 19 columns]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "score() got an unexpected keyword argument 'pos_label'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/leonsun/Documents/GitHub/churn-model/notebooks/log_reg.ipynb Cell 27'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/leonsun/Documents/GitHub/churn-model/notebooks/log_reg.ipynb#ch0000095?line=0'>1</a>\u001b[0m logreg\u001b[39m.\u001b[39;49mscore(y_pred, y_test,pos_label\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mYes\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: score() got an unexpected keyword argument 'pos_label'"
+     ]
     }
    ],
    "source": [
-    "X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "col_stuff = ['SeniorCitizen','Dependents']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SeniorCitizen</th>\n",
-       "      <th>Dependents</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7038</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7039</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7040</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7041</th>\n",
-       "      <td>1</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7042</th>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7032 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      SeniorCitizen Dependents\n",
-       "0                 0         No\n",
-       "1                 0         No\n",
-       "2                 0         No\n",
-       "3                 0         No\n",
-       "4                 0         No\n",
-       "...             ...        ...\n",
-       "7038              0        Yes\n",
-       "7039              0        Yes\n",
-       "7040              0        Yes\n",
-       "7041              1         No\n",
-       "7042              0         No\n",
-       "\n",
-       "[7032 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X[[c for c in X.columns if c in col_stuff]]"
+    "logreg.score(y_pred, y_test,pos_label='Yes')"
    ]
   }
  ],
